--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Fira Sans', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 40px;
@@ -42,6 +43,7 @@ h1{
 }
 .devlop-picture{
     width: 30%;
+    margin-left: 5%;
 }
 .devlop-contain{
     width: 60%;
@@ -50,4 +52,16 @@ h1{
 .devlop{
     margin-top: 50px;
     margin-bottom: 50px;
+}
+.wrokhard{
+    text-align: center;
+    background-color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.wrokhard h2{
+    color: white;
+}
+.wrokhard p{
+    color: white;
 }
